--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chanrithisak Phok (Cal) - Personal Page</title>
     <link rel="stylesheet" href="styles.css" />
+    <!-- Font Awesome for icons -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -25,19 +26,12 @@
         <div class="contact-info">
           <i class="fas fa-user-graduate"></i> Undergraduate Student<br />
           <i class="fas fa-map-marker-alt"></i> Sacramento, California, US<br />
-          <!-- <i class="fas fa-building"></i> Your Lab / Group at Your Department<br /> -->
-          <span><strong>Contact:</strong> </span
-          ><a href="mailto:phokchanrithisak@gmail.com"
+          <strong>Contact:</strong>
+          <a href="mailto:phokchanrithisak@gmail.com"
             >phokchanrithisak@gmail.com</a
           ><br />
-          <!-- <i class="fab fa-github"></i> -->
-          <span><strong>Github:</strong> </span
-          ><a href="https://github.com/yourgithub" target="_blank">xpcrts</a> 
-          <!-- <i class="fas fa-graduation-cap"></i>
-          <a href="#" target="_blank">Google Scholar</a> |
-          <i class="fab fa-linkedin"></i>
-          <a href="#" target="_blank">LinkedIn</a><br /><br />
-          <a href="#">CV</a>, <a href="#">transcript</a> -->
+          <strong>Github:</strong>
+          <a href="https://github.com/xpcrts" target="_blank">xpcrts</a>
         </div>
 
         <nav class="sidebar-nav">
@@ -150,11 +144,6 @@
           <section id="awards" class="panel">
             <h2>Honors & Awards</h2>
             <p>[Add your awards, scholarships, competitions, etc. here]</p>
-            <!-- Example -->
-            <!-- <div class="publication">
-            <strong>Dean's List - Fall 2023</strong><br />
-            Recognized for academic excellence.
-          </div> -->
           </section>
 
           <!-- Extracurricular Activities -->
@@ -169,7 +158,6 @@
             <p>
               Coming soon... or embed your Medium/Hashnode posts here later!
             </p>
-            <!-- You can later add RSS feed fetcher here -->
           </section>
         </div>
       </main>
@@ -178,8 +166,17 @@
     <!-- Production credit -->
     <div class="production-credit">a Chanrithisak Phok Production © 2016</div>
 
-    <!-- JavaScript for Tabs -->
+    <!-- Windows 95 Startup Sound -->
+    <audio id="startup-sound" preload="auto">
+      <source src="public/windows-xp-startup.mp3" type="audio/mpeg" />
+      <!-- Add .wav if you have it as fallback -->
+      <!-- <source src="public/windows95_startup.wav" type="audio/wav" /> -->
+      Your browser does not support audio.
+    </audio>
+
+    <!-- JavaScript for Tabs + Startup Sound (Plays once on first load, no manual click needed if allowed) -->
     <script>
+      // Tab switching
       document.querySelectorAll(".tab").forEach((tab) => {
         tab.addEventListener("click", function (e) {
           e.preventDefault();
@@ -195,7 +192,7 @@
         });
       });
 
-      // Sync sidebar navigation with tabs
+      // Sync sidebar links with tabs
       document.querySelectorAll(".sidebar-nav a").forEach((link) => {
         link.addEventListener("click", function (e) {
           e.preventDefault();
@@ -203,6 +200,34 @@
           document.querySelector(`.tab[data-tab="${targetTab}"]`).click();
         });
       });
+
+      // Play Windows 95 startup sound once on first page load
+      const startupAudio = document.getElementById("startup-sound");
+
+      if (startupAudio && !sessionStorage.getItem("startupPlayed")) {
+        startupAudio.volume = 0.7; // Comfortable volume
+
+        // Mark as played for this session (so it doesn't replay on tab switch/reload in same session)
+        sessionStorage.setItem("startupPlayed", "true");
+
+        // Attempt autoplay on load
+        window.addEventListener("load", () => {
+          const playPromise = startupAudio.play();
+
+          if (playPromise !== undefined) {
+            playPromise.catch(() => {
+              // If blocked, wait for first user interaction (click or key) to play once
+              const playOnce = () => {
+                startupAudio.play();
+                document.removeEventListener("click", playOnce);
+                document.removeEventListener("keydown", playOnce);
+              };
+              document.addEventListener("click", playOnce);
+              document.addEventListener("keydown", playOnce);
+            });
+          }
+        });
+      }
     </script>
   </body>
 </html>
