--- a/index.html
+++ b/index.html
@@ -309,7 +309,6 @@
           </section>
 
           <!-- Extracurricular Activities -->
-          <!-- Extracurricular Activities -->
           <section id="activities" class="panel">
             <h2>Extracurricular Activities</h2>
 
@@ -384,7 +383,89 @@
           <!-- Blog -->
           <section id="blog" class="panel">
             <h2>Blog</h2>
-            <p>Coming soon...</p>
+            <!-- Blog Card -->
+            <div class="award-item blog-card">
+              <div
+                class="blog-card-inner"
+                style="display: flex; gap: 15px; align-items: flex-start"
+              >
+                <a
+                  href="https://aseanfoundation.org/programme/east-asia-summit-hackathon/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <img
+                    src="public/eas-hackathon-thumb.jpg"
+                    alt="East Asia Summit Hackathon"
+                    style="width: 120px; height: auto; border: 2px solid black"
+                  />
+                </a>
+                <div style="flex: 1">
+                  <h3 class="award-title">
+                    <a
+                      href="https://aseanfoundation.org/programme/east-asia-summit-hackathon/"
+                      target="_blank"
+                      style="color: purple; text-decoration: none"
+                    >
+                      East Asia Summit Hackathon
+                    </a>
+                  </h3>
+                  <div class="award-meta-inline">
+                    Jakarta, Indonesia, December 2022
+                  </div>
+                  <div class="award-role">Regional Hackathon Participant</div>
+                  <ul class="award-details">
+                    <li>
+                      A regional platform mobilizing youth innovation to tackle
+                      marine plastic pollution. Organized by ASEAN Foundation
+                      with CSIRO and co-hosted by Australia, India, and
+                      Singapore.
+                    </li>
+                  </ul>
+                  <a
+                    href="https://aseanfoundation.org/programme/east-asia-summit-hackathon/"
+                    target="_blank"
+                    class="blog-button"
+                  >
+                    Read Blog
+                  </a>
+                </div>
+              </div>
+            </div>
+
+            <div class="blog-card">
+              <a
+                href="https://www.facebook.com/KITinstitute/photos/1793063127488865/"
+                target="_blank"
+              >
+                <img
+                  src="public/cimb.jpg"
+                  alt="KIT Academic Highlight - Student Life"
+                />
+              </a>
+              <div class="blog-card-content">
+                <h3>
+                  <a
+                    href="https://www.facebook.com/KITinstitute/photos/1793063127488865/"
+                    target="_blank"
+                    style="text-decoration: none"
+                  >
+                    KIT Academic Highlights – Student Life
+                  </a>
+                </h3>
+                <p>
+                  A snapshot from Kirirom Institute of Technology’s student life
+                  showcase, highlighting community and academic experiences.
+                </p>
+                <a
+                  href="https://www.facebook.com/KITinstitute/photos/1793063127488865/"
+                  target="_blank"
+                  class="blog-button"
+                >
+                  View on Facebook
+                </a>
+              </div>
+            </div>
           </section>
 
           <!-- Miscellaneous -->
