--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chanrithisak Phok (Cal) - Website</title>
-    <!-- Google Analytics -->
+    <!-- Google Analytics X -->
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-X6HTY3T481"
