remove startup windows sound

--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
 
     <!-- Audio Elements -->
     <audio id="startup-sound" preload="auto">
-      <source src="public/windows-xp-startup.mp3" type="audio/mpeg" />
+      <!-- <source src="public/windows-xp-startup.mp3" type="audio/mpeg" /> -->
     </audio>
 
     <audio id="tab-sound" preload="auto">
