--- a/bsod.html
+++ b/bsod.html
@@ -5,40 +5,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BSOD</title>
     <style>
+      html,
       body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
         background: #0000aa;
         color: white;
         font-family: "MS Sans Serif", "Microsoft Sans Serif", "Fixedsys",
           monospace;
         font-size: 16px;
-        margin: 0;
+        line-height: 1.8;
+        overflow: hidden; /* Prevent any scroll */
+      }
+
+      body {
+        display: flex;
+        flex-direction: column;
+        justify-content: center; /* Vertically center */
+        align-items: flex-start; /* Align content to left like real BSOD */
+        min-height: 100vh;
         padding: 40px;
+        box-sizing: border-box;
+      }
+
+      .container {
+        width: 100%;
+        max-width: 800px; /* Prevents stretching too wide on large screens */
+        margin: 0 auto;
         display: flex;
         flex-direction: column;
         justify-content: center;
-        align-items: center;
-        height: 100vh;
-        text-align: left;
-        line-height: 1.8;
-        cursor: default;
+        height: 100%;
       }
 
       .windows-logo {
         background: #c0c0c0;
         color: black;
-        padding: 2px 8px;
+        padding: 4px 12px;
         font-weight: bold;
         margin-bottom: 40px;
         border-top: 2px solid white;
         border-left: 2px solid white;
         border-right: 2px solid black;
         border-bottom: 2px solid black;
-        cursor: pointer; /* Hand cursor on hover */
+        display: inline-block;
+        cursor: pointer;
         user-select: none;
       }
 
       .windows-logo:hover {
         background: #dfdfdf;
+      }
+
+      .windows-logo:focus {
+        outline: 2px dotted white;
+      }
+
+      .content {
+        flex-grow: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
       }
 
       .blink {
@@ -50,23 +78,52 @@
           visibility: hidden;
         }
       }
+
+      /* Responsive font size for very small screens */
+      @media (max-height: 500px) {
+        body {
+          font-size: 14px;
+          padding: 20px;
+        }
+        .windows-logo {
+          margin-bottom: 20px;
+          padding: 3px 10px;
+        }
+      }
+
+      @media (max-height: 400px) {
+        body {
+          font-size: 13px;
+          padding: 15px;
+        }
+      }
     </style>
   </head>
   <body>
-    <div class="windows-logo" onclick="history.back()" tabindex="0">
-      Back to Windows
+    <div class="container">
+      <div
+        class="windows-logo"
+        onclick="history.back()"
+        tabindex="0"
+        role="button"
+        aria-label="Back to Windows"
+      >
+        Back to Windows
+      </div>
+
+      <div class="content">
+        An error has occurred. To continue:<br /><br />
+
+        Press Enter to return to Windows, or<br /><br />
+
+        Press CTRL+ALT+DEL to restart your computer. If you do this,<br />
+        you will lose any unsaved information in all open applications.<br /><br />
+
+        Error: 0E : 016F : BFF9B3D4<br /><br /><br />
+
+        <div>Press any key to continue <span class="blink">_</span></div>
+      </div>
     </div>
-
-    An error has occurred. To continue:<br /><br />
-
-    Press Enter to return to Windows, or<br /><br />
-
-    Press CTRL+ALT+DEL to restart your computer. If you do this,<br />
-    you will lose any unsaved information in all open applications.<br /><br />
-
-    Error: 0E : 016F : BFF9B3D4<br /><br /><br />
-
-    <div>Press any key to continue <span class="blink">_</span></div>
 
     <!-- JavaScript: Any key press OR click on logo goes back -->
     <script>
@@ -75,8 +132,7 @@
         history.back();
       });
 
-      // Also allow clicking the logo (already handled by onclick above)
-      // Extra: make logo focusable for accessibility
+      // Make logo accessible with Enter/Space
       document
         .querySelector(".windows-logo")
         .addEventListener("keyup", function (e) {
