--- a/index.html
+++ b/index.html
@@ -430,7 +430,104 @@
                 </ul>
               </div>
 
-              <!-- Add the rest of your awards as in previous versions -->
+              <div class="award-item">
+                <div class="award-header">
+                  <div class="award-title">CIMB 3D Conquest Competition</div>
+                  <div class="award-meta-inline">Singapore, 2018</div>
+                </div>
+                <div class="award-role">Top 6 Finalist</div>
+                <ul class="award-details">
+                  <li>
+                    Represented Cambodia in the competition and received an
+                    achievement award in the Coding Track.
+                  </li>
+                </ul>
+              </div>
+
+              <div class="award-item">
+                <div class="award-header">
+                  <div class="award-title">
+                    SmartStart Young Innovator Award Program
+                  </div>
+                  <div class="award-meta-inline">Cambodia, 2018</div>
+                </div>
+                <div class="award-role">Top 15 Finalist</div>
+                <ul class="award-details">
+                  <li>
+                    Recognized as one of the top 15 finalists in a national
+                    innovation competition for young innovators in Cambodia.
+                  </li>
+                </ul>
+              </div>
+
+              <div class="award-item">
+                <div class="award-header">
+                  <div class="award-title">
+                    American University of Phnom Penh
+                  </div>
+                  <div class="award-meta-inline">Cambodia, 2016</div>
+                </div>
+                <div class="award-role">
+                  Fully Funded Bachelor’s Scholarship, Computer Science
+                </div>
+                <ul class="award-details">
+                  <li>
+                    Awarded a fully funded scholarship to pursue a Bachelor’s
+                    degree in Computer Science.
+                  </li>
+                </ul>
+              </div>
+
+              <div class="award-item">
+                <div class="award-header">
+                  <div class="award-title">Royal University of Phnom Penh</div>
+                  <div class="award-meta-inline">Cambodia, 2016</div>
+                </div>
+                <div class="award-role">
+                  Top-Ranked Recipient, Computer Science Bachelor’s Scholarship
+                </div>
+                <ul class="award-details">
+                  <li>
+                    Selected as the highest-ranked candidate to receive a fully
+                    funded Bachelor’s scholarship in Computer Science.
+                  </li>
+                </ul>
+              </div>
+
+              <div class="award-item">
+                <div class="award-header">
+                  <div class="award-title">
+                    Paragon International University
+                  </div>
+                  <div class="award-meta-inline">Cambodia, 2016</div>
+                </div>
+                <div class="award-role">
+                  Computer Science Bachelor’s Scholarship
+                </div>
+                <ul class="award-details">
+                  <li>
+                    Awarded a fully funded scholarship to pursue a Bachelor’s
+                    degree in Computer Science.
+                  </li>
+                </ul>
+              </div>
+
+              <div class="award-item">
+                <div class="award-header">
+                  <div class="award-title">A+ National Diploma Exam Award</div>
+                  <div class="award-meta-inline">Cambodia, 2016</div>
+                </div>
+                <div class="award-role">
+                  Awarded by the Prime Minister Hun Sen
+                </div>
+                <ul class="award-details">
+                  <li>
+                    Achieved a top score in the National Diploma Exam with a GPA
+                    of 99.881, recognized at the national level by the Prime
+                    Minister of Cambodia.
+                  </li>
+                </ul>
+              </div>
             </section>
 
             <!-- Extracurricular Activities, Blog, Miscellaneous unchanged -->
