--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     />
     <link rel="icon" type="image/png" href="public/favicon.png" />
 
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.4/dist/confetti.browser.min.js"></script>
+
     <style>
       body {
         background: #008080;
@@ -243,6 +245,7 @@
   </head>
   <body>
     <canvas id="wordart-canvas"></canvas>
+    <canvas id="fireworks-canvas"></canvas>
 
     <!-- Back to Windows button -->
     <div class="back-button" id="back-button">Back to Windows</div>
@@ -310,7 +313,20 @@
                 Loading...
               </div>
               <div class="site-age" id="site-age">0d 0h 0m</div>
-              <button class="theme-toggle-btn" id="theme-toggle" title="Toggle Light/Dark Mode">☀️</button>
+              <button
+                class="theme-toggle-btn"
+                id="celebrate-button"
+                title="New Year Celebration!"
+              >
+                🎉
+              </button>
+              <button
+                class="theme-toggle-btn"
+                id="theme-toggle"
+                title="Toggle Light/Dark Mode"
+              >
+                ☀️
+              </button>
               <button class="close-btn" id="close-button">X</button>
             </div>
           </div>
@@ -1696,6 +1712,179 @@
           a.rel = "noopener noreferrer";
         });
       });
+      // === New Year Fireworks (Fully Transparent Overlay) ===
+      const celebrateButton = document.getElementById("celebrate-button");
+      const fwCanvas = document.getElementById("fireworks-canvas");
+      const fwCtx = fwCanvas.getContext("2d");
+
+      let fwAnimationId;
+      let rockets = [];
+      let particles = [];
+
+      function resizeFwCanvas() {
+        fwCanvas.width = window.innerWidth;
+        fwCanvas.height = window.innerHeight;
+      }
+      resizeFwCanvas();
+      window.addEventListener("resize", resizeFwCanvas);
+
+      class Rocket {
+        constructor() {
+          this.x = Math.random() * fwCanvas.width;
+          this.y = fwCanvas.height;
+          this.targetY = Math.random() * (fwCanvas.height * 0.45) + 80;
+          this.vx = (Math.random() - 0.5) * 3;
+          this.vy = -(Math.random() * 7 + 9);
+          this.color = `hsl(${Math.random() * 360}, 100%, 65%)`;
+          this.trail = [];
+          this.exploded = false;
+        }
+
+        update() {
+          if (this.exploded) return;
+
+          this.trail.push({ x: this.x, y: this.y });
+          if (this.trail.length > 12) this.trail.shift();
+
+          this.x += this.vx;
+          this.y += this.vy;
+          this.vy += 0.12;
+
+          if (this.y <= this.targetY || this.vy >= 0) {
+            this.explode();
+          }
+        }
+
+        explode() {
+          this.exploded = true;
+          const count = 80;
+          for (let i = 0; i < count; i++) {
+            const angle =
+              (Math.PI * 2 * i) / count + (Math.random() - 0.5) * 0.4;
+            const speed = Math.random() * 5 + 2.5;
+            particles.push(
+              new Particle(
+                this.x,
+                this.y,
+                Math.cos(angle) * speed,
+                Math.sin(angle) * speed,
+                this.color
+              )
+            );
+          }
+        }
+
+        draw() {
+          // Trail
+          fwCtx.strokeStyle = this.color;
+          fwCtx.lineWidth = 2.5;
+          fwCtx.globalAlpha = 0.8;
+          fwCtx.beginPath();
+          this.trail.forEach((p, i) => {
+            i === 0 ? fwCtx.moveTo(p.x, p.y) : fwCtx.lineTo(p.x, p.y);
+          });
+          fwCtx.stroke();
+
+          // Rocket tip
+          if (!this.exploded) {
+            fwCtx.globalAlpha = 1;
+            fwCtx.fillStyle = "white";
+            fwCtx.beginPath();
+            fwCtx.arc(this.x, this.y, 3, 0, Math.PI * 2);
+            fwCtx.fill();
+          }
+          fwCtx.globalAlpha = 1;
+        }
+      }
+
+      class Particle {
+        constructor(x, y, vx, vy, color) {
+          this.x = x;
+          this.y = y;
+          this.vx = vx;
+          this.vy = vy;
+          this.color = color;
+          this.alpha = 1;
+        }
+
+        update() {
+          this.x += this.vx;
+          this.y += this.vy;
+          this.vy += 0.08;
+          this.vx *= 0.98;
+          this.alpha -= 0.012;
+        }
+
+        draw() {
+          if (this.alpha <= 0) return;
+          fwCtx.globalAlpha = this.alpha;
+          fwCtx.fillStyle = this.color;
+          fwCtx.beginPath();
+          fwCtx.arc(this.x, this.y, 2.4, 0, Math.PI * 2);
+          fwCtx.fill();
+        }
+      }
+
+      function animateFireworks() {
+        // REMOVED: No black fade — fully transparent background
+        // We only clear what's necessary by not filling anything
+
+        // Clear only previous frames by drawing nothing in background
+        // This keeps the canvas transparent except for fireworks
+
+        rockets.forEach((r, i) => {
+          r.update();
+          r.draw();
+          if (r.exploded && r.trail.length === 0) {
+            rockets.splice(i, 1);
+          }
+        });
+
+        particles.forEach((p, i) => {
+          p.update();
+          p.draw();
+          if (p.alpha <= 0) {
+            particles.splice(i, 1);
+          }
+        });
+
+        // Clean up finished particles/rockets
+        if (rockets.length === 0 && particles.length === 0) {
+          fwCtx.clearRect(0, 0, fwCanvas.width, fwCanvas.height);
+          cancelAnimationFrame(fwAnimationId);
+          fwAnimationId = null;
+          return;
+        }
+
+        fwAnimationId = requestAnimationFrame(animateFireworks);
+      }
+
+      function startFireworks() {
+        fwCanvas.classList.add("active");
+
+        let count = 0;
+        const maxBursts = 7;
+
+        const interval = setInterval(() => {
+          if (count >= maxBursts) {
+            clearInterval(interval);
+            // Auto-hide canvas after last particles fade (~4-5 sec)
+            setTimeout(() => {
+              fwCanvas.classList.remove("active");
+            }, 5000);
+            return;
+          }
+          rockets.push(new Rocket());
+          count++;
+        }, 900);
+
+        if (!fwAnimationId) {
+          fwCtx.clearRect(0, 0, fwCanvas.width, fwCanvas.height); // Start clean
+          animateFireworks();
+        }
+      }
+
+      celebrateButton.addEventListener("click", startFireworks);
     </script>
   </body>
 </html>
